force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__ApplicableObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ApplicableObject__c</fullName>
    <label>Applicable Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>