force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__CalculationProcedureId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CalculationProcedureId__c</fullName>
    <label>Calculation Procedure</label>
    <referenceTo>vlocity_cmt__CalculationProcedure__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Procedure Versions</relationshipLabel>
    <relationshipName>PricingProcedureVersions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>