force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CurrentStatus__c</fullName>
    <formula>IF(AND(vlocity_cmt__StartDateTime__c &lt; NOW(), vlocity_cmt__IsEnabled__c, OR(ISNULL(vlocity_cmt__EndDateTime__c), vlocity_cmt__EndDateTime__c &gt; NOW())), &quot;Active&quot;,IF(AND(NOT(ISNULL(vlocity_cmt__EndDateTime__c)),vlocity_cmt__EndDateTime__c &lt; NOW(), vlocity_cmt__IsEnabled__c), &quot;Expired&quot;,IF(AND(vlocity_cmt__StartDateTime__c &gt; NOW(), vlocity_cmt__IsEnabled__c), &quot;Pending&quot;, &quot;Inactive&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status</label>
    <type>Text</type>
</CustomField>