force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__EnableLooping__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EnableLooping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Looping</label>
    <type>Checkbox</type>
</CustomField>