force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EndDateTime__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>