force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__InputBundleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__InputBundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Input DataMapper Bundle</label>
    <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Procedure Versions</relationshipLabel>
    <relationshipName>VlocityCalculationProcedureVersions</relationshipName>
    <type>Lookup</type>
</CustomField>