force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__LoopingSpecification__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__LoopingSpecification__c</fullName>
    <label>Loop Specification</label>
    <type>TextArea</type>
</CustomField>