force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__OutputBundleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OutputBundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Output DataMapper Bundle</label>
    <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Procedure Versions (Output DataMapper Bundle)</relationshipLabel>
    <relationshipName>VlocityCalculationProcedureVersions1</relationshipName>
    <type>Lookup</type>
</CustomField>