force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__PreProcessorClass__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PreProcessorClass__c</fullName>
    <label>Pre Processor Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>