force-app/main/default/objects/vlocity_cmt__CalculationProcedureVersion__c/fields/vlocity_cmt__Variables__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Variables__c</fullName>
    <label>Variables</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>